--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -276,8 +276,7 @@
             left: 4px;
             right: 0;
             height: 27px;
-            //background: linear-gradient($background-color 0%, $accent-light-color 30%, $accent-shadow-color 100%) 0 -27px no-repeat;
-            background: linear-gradient(red 0%, green 25%, blue 100%) 0 -27px no-repeat;
+            background: linear-gradient($background-color 0%, $accent-light-color 30%, $accent-shadow-color 100%) 0 -27px no-repeat;
             background-size: 36px 54px;
             transition: background-position $animation-fast ease-in-out;
             z-index: -2;
