--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -264,8 +264,8 @@
             position: absolute;
             left: 4px;
             top: 0;
-            right: 0;
-            height: 27px;
+            right: 1px;
+            height: 26px;
             background: linear-gradient(
                 $accent-dark-shadow-color,
                 $accent-shadow-color
