Fix masking alias

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -295,6 +295,7 @@
             left: -3px;
             fill: $accent-light-color;
             pointer-events: none;
+            z-index: -1;
         }
 
         &-mask-right {
