--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -75,6 +75,8 @@ $small-font-weight: 400;
 $small-font-size: 10pt;
 $small-font-line-height: 17pt;
 
+$smallest-font-size: 8pt;
+
 $fallback-font: sans-serif;
 
 $background-font: Arial;
