--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -7,7 +7,7 @@
 <h1 data-pointer
     data-ng-init="news.initialize()">News</h1>
 
-<dateselector page="@this.Model.Page" />
+<dateselector page="@this.Model.Page" year="@this.Model.Year" />
 
 @foreach (var story in this.Model.Stories)
 {
