Fix push offset on date selector scroll left

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -569,7 +569,8 @@ $date-selector-margin: 10px;
             }
 
             // Hover/normal gradient overlay
-            .date-selector-page-overlay {
+            .date-selector-page-overlay,
+            .date-selector-page-pushed {
                 left: 0;
             }
 
